--- a/en/index.html
+++ b/en/index.html
@@ -128,10 +128,10 @@
             </div>
           </div>
           <div class="infoContainer">
-            <h3 id="info">A tecnology lover</h3>
-            <h3 id="info">living in Argentina.</h3>
-            <h3 id="info">Its never too late to discover</h3>
-            <h3 id="info">your vocation! that's what happened to me.</h3>
+            <h3 class="info">A tecnology lover</h3>
+            <h3 class="info">living in Argentina.</h3>
+            <h3 class="info">Its never too late to discover</h3>
+            <h3 class="info">your vocation! that's what happened to me.</h3>
           </div>
         </div>
       </div>
