--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             </div>
           </div>
           <div class="infoContainer">
-            <h3 id="info">Un amante de la tecnologia</h3>
-            <h3 id="info">viviendo en Argentina.</h3>
-            <h3 id="info">Nunca es tarde para descurbrir</h3>
-            <h3 id="info">tu bocación! y eso me paso.</h3>
+            <h3 class="info">Un amante de la tecnologia</h3>
+            <h3 class="info">viviendo en Argentina.</h3>
+            <h3 class="info">Nunca es tarde para descurbrir</h3>
+            <h3 class="info">tu bocación! y eso me paso.</h3>
           </div>
         </div>
       </div>
